@@ -1,2 +1,3 @@
 1.0.0
-  * dbus init
+  * dbus init.
+  * method return list, array and dict.
